--- a/app/src/main/res/layout/item_details_layout.xml
+++ b/app/src/main/res/layout/item_details_layout.xml
@@ -47,7 +47,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:text="Item Title"
+            android:text="@string/item_title"
             android:textColor="@color/primary"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -62,7 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Price:"
+            android:text="@string/price"
             android:textColor="#000000"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="@+id/item_title_preview"
@@ -74,7 +74,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
-            android:text="price value"
+            android:text="@string/price_value"
             android:textColor="#000000"
             android:textSize="18sp"
             app:layout_constraintStart_toEndOf="@+id/price_string2"
@@ -96,7 +96,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Quantity:"
+            android:text="@string/quantity"
             android:textColor="#000000"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="@+id/price_string2"
@@ -118,7 +118,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
-            android:text="maximum amount: 3"
+            android:text="@string/maximum_amount_3"
             android:textColor="#FF0000"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@+id/item_quantity_preview"
@@ -134,7 +134,7 @@
             android:layout_marginRight="86dp"
             android:layout_marginBottom="32dp"
             android:background="#FFFFFF"
-            android:text="Add to Cart"
+            android:text="@string/add_to_cart"
             android:textColor="#FFFFFF"
             app:backgroundTint="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
