--- a/app/src/main/res/layout/confirmation_layout.xml
+++ b/app/src/main/res/layout/confirmation_layout.xml
@@ -30,7 +30,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Thank You for Ordering!"
+        android:text="@string/thank_you_for_ordering"
         android:textColor="#000000"
         android:textSize="36sp"
         android:textStyle="bold"
