--- a/app/src/main/res/layout/item_card_layout.xml
+++ b/app/src/main/res/layout/item_card_layout.xml
@@ -41,7 +41,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
-                android:text="Item Title"
+                android:text="@string/item_title"
                 android:textColor="@color/primary"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -54,7 +54,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Price:"
+                android:text="@string/price"
                 android:textColor="#000000"
                 android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="@+id/item_title"
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
-                android:text="Item price"
+                android:text="@string/item_price"
                 android:textColor="#000000"
                 android:textSize="18sp"
                 app:layout_constraintStart_toEndOf="@+id/price_string"
