--- a/app/src/main/res/layout/top_toolbar_layout.xml
+++ b/app/src/main/res/layout/top_toolbar_layout.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="12dp"
-            android:text="Sports Center"
+            android:text="@string/sports_center"
             android:textColor="@color/white"
             android:textSize="30sp">
 
